--- a/index.html
+++ b/index.html
@@ -382,13 +382,13 @@
         let adminLoggedIn = false;
 
         // Sample events
-        const sampleEvents = [
-        { id: "1", name: "Café Nat Matin", category: "Cafés Nat", date: "20 nov", time: "10:00", location: "Créteil, Café du Centre", desc: "Venez discuter autour d'un bon café", maxSeats: 8 },
-        { id: "2", name: "Café Nat Après-midi", category: "Cafés Nat", date: "22 nov", time: "15:00", location: "Créteil, Salon de Thé", desc: "Rencontre conviviale", maxSeats: 10 },
-        { id: "3", name: "Table d'hôtes Gastronomique", category: "Tables d'hôtes", date: "25 nov", time: "19:30", location: "Restaurant L'Authentique", desc: "Dîner convivial", maxSeats: 12 },
-        { id: "4", name: "Table d'hôtes Cuisine", category: "Tables d'hôtes", date: "5 déc", time: "19:00", location: "Maison d'Hôtes", desc: "Saveurs françaises", maxSeats: 8 },
-        { id: "5", name: "ApéroNus Soirée", category: "ApéroNus", date: "23 nov", time: "18:00", location: "Terrasse du Lac", desc: "Apéritif convivial", maxSeats: 15 },
-        { id: "6", name: "ApéroNus Networking", category: "ApéroNus", date: "28 nov", time: "17:30", location: "Lieu Atypique", desc: "Rencontre décontractée", maxSeats: 20 }        ];
+        function loadEvents() {
+            if (!window.firebaseDb) return;
+            onValue(ref(window.firebaseDb, 'events'), (snapshot) => {
+                const data = snapshot.val();window.eventsData = data ? Object.entries(data).map(([id, event]) => ({...event, id})) : [];
+                renderEvents('calendar-events');
+  });
+}
 
         function getCategoryClass(category) {
             if (category.includes("Cafés")) return "category-cafes";
@@ -406,7 +406,7 @@
                         <div class="event-info"><strong>📅 Date:</strong> ${event.date}</div>
                         <div class="event-info"><strong>⏰ Heure:</strong> ${event.time}</div>
                         <div class="event-info"><strong>📍 Lieu:</strong> ${event.location}</div>
-                                        <div class="event-info"><strong>🎫 Places:</strong> ${event.maxSeats}</div>
+                                        <div class="event-info"><strong>🎫 Places restantes:</strong> ${remainingSeats}/${event.maxSeats}</div>
                         <p style="color: #7D6B68; margin-top: 10px;">${event.desc}</p>
                     </div>
                 `;
@@ -437,6 +437,18 @@
                         <select id="regEvent" required>${eventOptions}</select>
                     </div>
                     <button onclick="registerUser()">✅ S'inscrire</button>
+                // Compter les inscriptions existantes pour cet événement
+onValue(ref(window.firebaseDb, 'registrations'), (snapshot) => {
+  const data = snapshot.val();
+  const registrations = data ? Object.values(data).filter(r => r.event_id === eventId) : [];
+  const event = window.eventsData.find(e => e.id === eventId);
+  
+  if (registrations.length >= event.maxSeats) {
+    showMessage('❌ Événement complet!', 'error', 'regMessage');
+    return;
+  }
+  // ... continuer l'inscription
+}, {onlyOnce: true});
                     <div id="regMessage"></div>
                 </div>
             `;
@@ -468,7 +480,38 @@
                         <h4 style="margin-top: 20px; color: #5C4A47;">Inscriptions en Temps Réel</h4>
                         <div id="registrationsList" style="margin-top: 15px;"></div>
                     </div>
+
+                <h4>Créer un nouvel événement</h4>
+<div class="form-group"><label>Nom</label><input type="text" id="eventName"></div>
+<div class="form-group"><label>Catégorie</label>
+  <select id="eventCategory">
+    <option>Cafés Nat</option>
+    <option>Tables d'hôtes</option>
+    <option>ApéroNus</option>
+  </select>
+</div>
+<div class="form-group"><label>Date</label><input type="text" id="eventDate" placeholder="25 nov"></div>
+<div class="form-group"><label>Heure</label><input type="time" id="eventTime"></div>
+<div class="form-group"><label>Lieu</label><input type="text" id="eventLocation"></div>
+<div class="form-group"><label>Description</label><textarea id="eventDesc"></textarea></div>
+<div class="form-group"><label>Places disponibles</label><input type="number" id="eventSeats" value="10"></div>
+<button onclick="createEvent()">➕ Créer l'événement</button>
                 `;
+            window.createEvent = function() {
+  const newEvent = {
+    name: document.getElementById('eventName').value,
+    category: document.getElementById('eventCategory').value,
+    date: document.getElementById('eventDate').value,
+    time: document.getElementById('eventTime').value,
+    location: document.getElementById('eventLocation').value,
+    desc: document.getElementById('eventDesc').value,
+    maxSeats: parseInt(document.getElementById('eventSeats').value)
+  };
+  
+  push(ref(window.firebaseDb, 'events'), newEvent)
+    .then(() => alert('✅ Événement créé!'))
+    .catch(err => alert('❌ Erreur: ' + err.message));
+};
                 if (elem) elem.innerHTML = html;
                 loadRegistrations();
             }
