Update event information in index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="info-card">
             <h3>Consignes</h3>
             <ul>
-              <li>Les événements sont organisés 3 fois par mois</li>
+              <li>Les événements sont régulièrement publiés durant le mois</li>
               <li>Merci de confirmer votre présence après inscription</li>
               <li>En cas d'empêchement, pensez à vous désinscrire</li>
               <li>Le respect et la discrétion sont de mise</li>
