Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
             <h3>Contact</h3>
             <div class="contact-item">
               <span class="contact-icon">📱</span>
-              <span>Téléphone : <a href="tel:+33600000000">06 00 00 00 00</a></span>
+              <span>Téléphone : <a href="tel:+33663081980">06 63 08 19 80</a></span>
             </div>
             <div class="contact-item">
               <span class="contact-icon">💬</span>
-              <span>WhatsApp : <a href="https://wa.me/33600000000" target="_blank">Contacter sur WhatsApp</a></span>
+              <span>WhatsApp : <a href="https://wa.me/33663081980" target="_blank">Contacter sur WhatsApp</a></span>
             </div>
             <div class="contact-item">
-              <span class="contact-icon">✈️</span>
-              <span>Telegram : <a href="https://t.me/evenementsnat" target="_blank">@evenementsnat</a></span>
+              <span class="contact-icon">✉️</span>
+              <span>Email : <a href="email:dayanjmd@hotmail.com">dayanjmd@hotmail.com</a></span>
             </div>
           </div>
 
