Update cancellation instruction in index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <ul>
               <li>Les événements sont régulièrement publiés durant le mois</li>
               <li>Merci de confirmer votre présence après inscription</li>
-              <li>En cas d'empêchement, pensez à vous désinscrire</li>
+              <li>En cas d'empêchement, pensez à prévenir</li>
               <li>Le respect et la discrétion sont de mise</li>
             </ul>
           </div>
